[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper ={ version="1.3.1",features=["full"]}
tokio ={ version="1.37.0", features=["full"]}
tower = "0.4.13"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[[bin]]
name = "reverse_proxy"
path = "main.rs"
